--- a/EventRegistration-Backend/build.gradle
+++ b/EventRegistration-Backend/build.gradle
@@ -28,3 +28,8 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+
+task stage () {
+    dependsOn ':EventRegistration-Backend:assemble'
+}
